# incsight

./: Cargo.toml
src/: main.rs
ui/: app-window.slint
